force-app/main/default/objects/User_Answer__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>