force-app/main/default/objects/User_Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>User Answers</relationshipLabel>
    <relationshipName>User_Answers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>