force-app/main/default/objects/User_Answer__c/fields/Unit_Progress__c.field-meta.xml
<CustomField>
    <fullName>Unit_Progress__c</fullName>
    <label>Unit Progress</label>
    <referenceTo>Unit_Progress__c</referenceTo>
    <relationshipLabel>User Answers</relationshipLabel>
    <relationshipName>User_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>